[GC] ZGC: Make "High Usage" threshold adjustable
Summary: Introduce option -XX:ZHighUsagePercent
- The option sets the percentage of heap usage for ZGC High Usage rule
- The option sets a decimal number (95.0 by default, which does not
  change the behavior of the original High Usage rule)

Test Plan: gc/z/TestHighUsageLargeHeap.java

Reviewers: sanhong.lsh, chuansheng.lcs, maoliang.ml, tongbao.ztb

Issue: https://aone.alibaba-inc.com/task/25125443

CR: https://code.aone.alibaba-inc.com/xcode/jdk11/codereview/2472602